--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <button id="clr" onclick="erase()">Clear</button>
 <button id="dataget" onclick="getdata()">Predict</button>
 <p id="result"></p>
-<p><b>NOTE: There are issues with drawing if you are on a mobile device.</b>
+<p><b>NOTE: There may be issues with drawing if you are on a mobile device.</b>
 <br><i>Trained using a convolutional network. It helps to draw clearly and to center the number though the convolutional
 network should be able to deal with off-center digits.</i></p>
 </body>
