--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
 <p><b>NOTE: There may be issues with drawing if you are on a mobile device.</b>
 <br><i>Trained using a convolutional network. It helps to draw clearly and to center the number though the convolutional
 network should be able to deal with off-center digits.</i></p>
-<p>I used nearly the exact same methodology outlined <a href="https://www.kaggle.com/yassineghouzam/introduction-to-cnn-keras-0-997-top-6">here</a></p>
+<p>I used nearly the same methodology outlined <a href="https://www.kaggle.com/yassineghouzam/introduction-to-cnn-keras-0-997-top-6">here</a></p>
 </body>
 </html>
