--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     height: 150px;
     width: 150px;
 }
+	
+body {
+  background-color: #303030;
+  color: white;
+  font-family: "Trebuchet MS";
+}
 </style>
 </head>
 
