--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <button id="dataget" onclick="getdata()">Predict</button>
 <p>Predicted Number: <span id="result"></span></p>
 <p><b>NOTE: There may be issues with drawing if you are on a mobile device.</b>
-<br><i>Done by training a convolutional neural network on the MNIST dataset.</i></p>
+<br><a href="https://github.com/gippoo/digitclassifier2/blob/master/mnistclassifier.py">Done by training a convolutional neural network on the MNIST dataset.</i></a></p>
 </div>
 </body>
 </html>
