--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <p style="font-size:24px; margin-top:0; margin-bottom:10px;">Draw a single digit number below.</p>
 <div id="canholder">
 </div>
-<p>Click 'Predict' to have the computer guess what number you drew. (Only single digit numbers.)</p>
+<p>Click 'Predict' to have the computer guess what number you drew.</p>
 
 <button id="clr" onclick="erase()">Clear</button>
 <button id="dataget" onclick="getdata()">Predict</button>
